# llm-pluralism-web

./: .gitignore  README.md  SETUP.md
app/: globals.css  layout.tsx  page.tsx
backend/: .env.example  Dockerfile  pyproject.toml  railpack.toml
backend/app/: config.py  database.py  main.py  prolific.py  schema_migrations.py  traffic_source.py
backend/app/data/: exported_AI_responses.json  persona_score_means.json  question_score_discriminated.json  responses.json  responses_ordered.json
backend/app/models/: __init__.py  database.py  questionnaire_response.py  rating.py  session.py
backend/app/routers/: rating.py  responses.py  results.py  session.py
backend/app/schemas/: __init__.py  rating.py  results.py  session.py
backend/app/services/: personas.py  selection.py
backend/migrations/: 001_add_prolific_columns.sql
backend/tests/: conftest.py  test_prolific.py  test_rating.py  test_responses.py  test_results.py  test_session.py  test_stratified_selection.py  test_traffic_source.py
components/: network-canvas.tsx  value-sliders.tsx
components/views/: landing-view.tsx  profile-view.tsx  questionnaire-view.tsx  rate-view.tsx  results-view.tsx
frontend/: index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx  api.ts  index.css  types.ts
frontend/src/components/: AxisSlider.tsx  Badge.tsx  NetworkBackground.tsx  ProgressBar.tsx  RatingCircles.tsx
frontend/src/pages/: LandingPage.tsx  QuestionnairePage.tsx  RatingPage.tsx  ResultsPage.tsx  TransitionPage.tsx
lib/: api.ts  personas.ts  traffic-attribution.ts  types.ts
